kubernetes/services/homebox/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homebox
  labels:
    name: homebox
    type: productivity
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
